[project]
name = "semantic-response-convergence"
version = "0.1.0"
description = "A modular research framework for measuring semantic response convergence in LLM agents."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "datasets>=2.19.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
]

[tool.ruff]
line-length = 100